Add tasks to documentation

--- a/doc/kapitel2.tex
+++ b/doc/kapitel2.tex
@@ -1,1 +1,8 @@
+\chapter{Clean Architecture}
+\label{chapter:clean_architecture}
 
+\section{Schichtenarchitektur}
+\label{section:schichtenarchitektur}
+
+\todo{Schichtarchitektur planen und
+  begründen}
