--- a/doc/kapitel3.tex
+++ b/doc/kapitel3.tex
@@ -1,1 +1,10 @@
+\chapter{Programming Principles}
+\label{chapter:programming_principles}
 
+\section{Analyse und Begründung der ausgewählten Prinzipien}
+
+\todo{Analyse und Begründung für 5
+  (fünf) der vorgestellten Prinzipien aus
+  • SOLID
+  • GRASP
+  • DRY}
