Add some ul analysis

--- a/doc/kapitel1.tex
+++ b/doc/kapitel1.tex
@@ -4,7 +4,28 @@
 \section{Analyse der Ubiquitous Language}
 \label{section:analyse_der_ubiquitous_language}
 
-\todo{Fill content}
+Die Ubiquitous Language dieses Projekts richtet sich nach der üblichen Sprache in der Vereinsdomäne. Die folgenden Begriffe sind speziell aus der Subdomäne \glqq Veranstaltungen\grqq{} entnommen und werden im weiteren Verlauf des Projekts verwendet.
+
+\paragraph{\glqq Freiwilliger\grqq{} (Volunteer)}
+Dieser Begriff bezeichnet eine Person, die bei einer Veranstaltung des Vereins hilft.
+
+\paragraph{\glqq Veranstaltung\grqq{} (Event)}
+Dieser begriff bezeichnet eine Vereinsveranstaltung, die Freiwillige für die Durchführung benötigt.
+
+\paragraph{\glqq Aufgabe\grqq{} (Task)}
+Dieser Begriff bezeichnet eine konkrete Tätigkeit, die bei einer Veranstaltung durchgeführt werden muss.
+
+\paragraph{\glqq Eigenschaft\grqq{} (Feature)}
+Dieser Begriff bezeichnet eine Fähigkeit, die ein Freiwilliger besitzt. Neben technischen oder fachlichen Fähigkeiten kann dies auch der Besitz eines Führerscheins oder der Besitz eines Schlüssels für eine bestimmte Räumlichkeit sein.
+
+\paragraph{\glqq Mitglied\grqq{} (Member)}
+Dieser Begriff bezeichnet eine Person, die Mitglied im Verein ist. Prinzipiell stehen Mitglieder als potentielle Freiwillige zur Verfügung.
+
+\paragraph{\glqq Veranstaltungsort\grqq{} (Location)}
+Dieser Begriff bezeichnet den Ort, an dem eine Veranstaltung stattfindet.
+
+\paragraph{\glqq Organisator\grqq{} (Organizer)}
+Dieser Begriff bezeichnet ein Vereinsmitglied, das eine Veranstaltung organisiert.
 
 \section{Analyse und Begründung der verwendeten Muster}
 \label{section:analyse_und_begrundung_der_verwendeten_muster}
