Make ul analysis more precise

--- a/doc/kapitel1.tex
+++ b/doc/kapitel1.tex
@@ -6,26 +6,26 @@
 
 Die Ubiquitous Language dieses Projekts richtet sich nach der üblichen Sprache in der Vereinsdomäne. Die folgenden Begriffe sind speziell aus der Subdomäne \glqq Veranstaltungen\grqq{} entnommen und werden im weiteren Verlauf des Projekts verwendet.
 
-\paragraph{\glqq Freiwilliger\grqq{} (Volunteer)}
-Dieser Begriff bezeichnet eine Person, die bei einer Veranstaltung des Vereins hilft.
-
 \paragraph{\glqq Veranstaltung\grqq{} (Event)}
-Dieser begriff bezeichnet eine Vereinsveranstaltung, die Freiwillige für die Durchführung benötigt.
+Dieser begriff bezeichnet eine Vereinsveranstaltung, die Freiwillige für die Durchführung benötigt. Eine Veranstaltung findet in einem bestimmten Zeitraum statt und hat einen Veranstaltungsort. Außerdem gibt es verschiedene Aufgaben, die in einem bestimmten Zeitfenster durch Freiwillige erledigt werden müssen. Durch die verschiedenen Aufgabenprofile sind auch verschiedene Eigenschaften von Freiwilligen gefragt. Eine Veranstaltung wird durch mindestens einen Organisator organisiert.
+
+\paragraph{\glqq Freiwilliger\grqq{} (Volunteer)}
+Dieser Begriff bezeichnet eine Person, die bei einer Veranstaltung des Vereins hilft. Ein Freiwilliger kann verschiedene Eigenschaften besitzen, die für die Durchführung einer Veranstaltung benötigt werden. Ein Freiwilliger kann auch Mitglied im Verein sein.
 
 \paragraph{\glqq Aufgabe\grqq{} (Task)}
-Dieser Begriff bezeichnet eine konkrete Tätigkeit, die bei einer Veranstaltung durchgeführt werden muss.
+Dieser Begriff bezeichnet eine konkrete Tätigkeit, die bei einer Veranstaltung in einem bestimmten Zeitraum durchgeführt werden muss. Außerdem kann es sein, dass eine Aufgabe bestimmte Anforderungen an die Eigenschaften von Freiwilligen hat. Eine Aufgabe wird durch mindestens einen Freiwilligen erledigt.
 
 \paragraph{\glqq Eigenschaft\grqq{} (Feature)}
 Dieser Begriff bezeichnet eine Fähigkeit, die ein Freiwilliger besitzt. Neben technischen oder fachlichen Fähigkeiten kann dies auch der Besitz eines Führerscheins oder der Besitz eines Schlüssels für eine bestimmte Räumlichkeit sein.
 
 \paragraph{\glqq Mitglied\grqq{} (Member)}
-Dieser Begriff bezeichnet eine Person, die Mitglied im Verein ist. Prinzipiell stehen Mitglieder als potentielle Freiwillige zur Verfügung.
+Dieser Begriff bezeichnet eine Person, die Mitglied im Verein ist. Prinzipiell stehen Mitglieder als potentielle Freiwillige zur Verfügung. Sie haben also auch verschiedene Eigenschaften.
 
 \paragraph{\glqq Veranstaltungsort\grqq{} (Location)}
-Dieser Begriff bezeichnet den Ort, an dem eine Veranstaltung stattfindet.
+Dieser Begriff bezeichnet den Ort, an dem eine Veranstaltung stattfindet. Der Ort kann auch \glqq virtuell\grqq{} sein, wenn die Veranstaltung online stattfindet.
 
 \paragraph{\glqq Organisator\grqq{} (Organizer)}
-Dieser Begriff bezeichnet ein Vereinsmitglied, das eine Veranstaltung organisiert.
+Dieser Begriff bezeichnet ein Vereinsmitglied, das eine Veranstaltung organisiert. Zur Organisation gehört das Festlegen von Ort und Zeit, das Festlegen von Aufgaben und das Einladen von Freiwilligen.
 
 \section{Analyse und Begründung der verwendeten Muster}
 \label{section:analyse_und_begrundung_der_verwendeten_muster}
