Add subsection Domain Events

--- a/doc/kapitel1.tex
+++ b/doc/kapitel1.tex
@@ -27,5 +27,7 @@ Dieser Begriff bezeichnet den Ort, an dem eine Veranstaltung stattfindet. Der Or
 \paragraph{\glqq Organisator\grqq{} (Organizer)}
 Dieser Begriff bezeichnet ein Vereinsmitglied, das eine Veranstaltung organisiert. Zur Organisation gehört das Festlegen von Ort und Zeit, das Festlegen von Aufgaben und das Einladen von Freiwilligen.
 
+\subsection{Domain Events}
+
 \section{Analyse und Begründung der verwendeten Muster}
 \label{section:analyse_und_begrundung_der_verwendeten_muster}
