Keep naming of domain wording definition consistent

--- a/doc/kapitel1.tex
+++ b/doc/kapitel1.tex
@@ -27,7 +27,7 @@ Dieser Begriff bezeichnet den Ort, an dem eine Veranstaltung stattfindet. Der Or
 \paragraph{\glqq Organisator\grqq{} (Organizer)}
 Dieser Begriff bezeichnet ein Vereinsmitglied, das eine Veranstaltung organisiert. Zur Organisation gehört das Festlegen von Ort und Zeit, das Festlegen von Aufgaben und das Einladen von Freiwilligen.
 
-\paragraph{Veranstaltungszeitraum}
+\paragraph{\glqq Veranstaltungszeitraum\grqq{} (Event time frame)}
 Der Veranstaltungszeitraum bezeichnet den Zeitraum, in dem eine Veranstaltung stattfindet.
 Dieser Zeitraum kann sich über wenige Stunden, einen Tag oder auch mehrere Tage erstrecken.
 
