Remove unneeded lists

--- a/doc/bericht.tex
+++ b/doc/bericht.tex
@@ -136,9 +136,9 @@
 \newpage
 \tableofcontents           % Inhaltsverzeichnis hier ausgeben
 \listoffigures             % Liste der Abbildungen
-\listoftables              % Liste der Tabellen
-\lstlistoflistings         % Liste der Listings
-\listofequations           % Liste der Formeln
+%\listoftables              % Liste der Tabellen
+%\lstlistoflistings         % Liste der Listings
+%\listofequations           % Liste der Formeln
 
 % Jetzt kommt der "eigentliche" Text
 \include{glossaries}              % Abkürzungsverzeichnis
